--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,10 +1,10 @@
 .body {
     background-color: #f0f0f0;
-    background-image: url('background-image.jpg');
+    background-image: url('background.png');
     background-size: cover;
 }
 .container.regFormContainer {
-    background-color: #E6E6FA;
+    background-color: rgba(255, 0, 0, 0);
     padding: 50px 0 20px 50px;
     margin-bottom: 50px;
 }
