--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,10 +1,20 @@
 .body {
     background-color: antiquewhite;
+        font-family: Arial, sans-serif;
+        background-image: url('background.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center center;
+        margin: 0;
+        padding: 0;
+
 }
 .container.regFormContainer {
     background-color: #fff;
     padding: 50px 0 20px 50px;
     margin-bottom: 50px;
+
 }
 
 
