--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,11 +3,27 @@
     background-image: url('background.png');
     background-size: cover;
 }
+.container {
+    min-height: 1000px;
+}
 .container.regFormContainer {
     background-color: rgba(255, 0, 0, 0);
-    padding: 50px 0 20px 50px;
     margin-bottom: 50px;
 }
 
+.logo-text {
+    margin-top: -50px
+}
+.buttons {
+    align-items: center;
+    display: flex;
+    justify-content: end;
+}
+.btn-group-vertical .btn {
+    padding: 15px 50px;
+}
+.user-details p span {
+    font-weight: bold;
+}
 
 
